--- a/cpp05/ex01/Makefile
+++ b/cpp05/ex01/Makefile
@@ -15,7 +15,7 @@ PURPLE = \033[035m
 #		VARIABLES
 ######################################
 
-NAME = bureaucrat
+NAME = form
 SRCS = $(wildcard *.cpp)
 HEADERS = $(wildcard *.hpp)
 OBJS = $(SRCS:.cpp=.o)
