class Cat and Dog can now change their brains and set ideas

--- a/cpp04/ex01/Makefile
+++ b/cpp04/ex01/Makefile
@@ -20,7 +20,7 @@ SRCS = $(wildcard *.cpp)
 HEADERS = $(wildcard *.hpp)
 OBJS = $(SRCS:.cpp=.o)
 CXX = c++
-CXXFLAGS = -Wall -Wextra -Werror -std=c++98 #-fno-elide-constructors
+CXXFLAGS = -Wall -Wextra -Werror -std=c++98 -g #-fno-elide-constructors
 RM = rm -f
 
 ######################################
